review: pure per-OS launcher derivation, GUI relaunch parity, name-preferred pick
- packagedLauncherBinary's per-OS branches are now pure functions of
  java.home (mac/windows/linuxLauncher) with no current-OS checks inside,
  so ALL layouts are unit-tested regardless of the CI platform.
- pickLauncher prefers the jpackage-named launcher (app/install dir name,
  case-insensitive) over a sole-executable guess, and warns instead of
  silently returning null when several unnamed candidates exist.
- buildGuiCommand falls back to the native launcher too, closing the
  mirror-image no-bin/java gap in openGui() on packaged Windows/Linux.
- Shared macBundleFile helper (macAppBundlePath re-parsed the same path)
  and buildGuiCommand reuses PASSTHROUGH_PROPS instead of an inline copy.

Generated with [Claude Code](https://claude.com/claude-code)